=======
CHANGES
=======

4.0.0 (unreleased)
------------------

- Made ``zope.component`` dependency optional.  Use the ``component`` extra
  to force its installation (or just require it directly).  If
  ``zope.component`` is not present, this package defines the ``ISite``
  interface itself, and omits adapter registrations from its ZCML.

- Added support for PyPy.

- Added support for continuous integration using ``tox`` and ``jenkins``.

- 100% unit test coverage.

- Added Sphinx documentation:  moved doctest examples to API reference.

- Added 'setup.py docs' alias (installs ``Sphinx`` and dependencies).

- Added 'setup.py dev' alias (runs ``setup.py develop`` plus installs
  ``nose`` and ``coverage``).

- Replaced deprecated ``zope.component.adapts`` usage with equivalent
  ``zope.component.adapter`` decorator.

- Replaced deprecated ``zope.interface.implements`` usage with equivalent
  ``zope.interface.implementer`` decorator.

- Dropped support for Python 2.4 and 2.5.


3.9.1 (2011-08-22)
------------------

- Added zcml extra as well as a test for configure.zcml.


3.9.0 (2009-12-29)
------------------

- Moved LocationCopyHook related tests to zope.copy and remove a test
  dependency on that package.

3.8.2 (2009-12-23)
------------------

- Fixed a typo in the configure.zcml.

3.8.1 (2009-12-23)
------------------

- Removed dependency on zope.copy: the LocationCopyHook adapter is registered
  only if zope.copy is available.

- Use the standard Python doctest module instead of zope.testing.doctest, which
  has been deprecated.

3.8.0 (2009-12-22)
------------------

- Adjusted to testing output caused by new zope.schema.

3.7.1 (2009-11-18)
------------------

- Moved the IPossibleSite and ISite interfaces to zope.component as they are
  dealing with zope.component's concept of a site, but not with location.

3.7.0 (2009-09-29)
------------------

- Added getParent() to ILocationInfo and moved the actual implementation here