@@ -13,49 +13,54 @@
 ##############################################################################
 import unittest
 
+try:
+    import zope.copy
+except ImportError:
+    def test_suite():
+        return unittest.TestSuite()
+else:
+    class LocationCopyHookTests(unittest.TestCase):
 
-class LocationCopyHookTests(unittest.TestCase):
+        def _getTargetClass(self):
+            from zope.location.pickling import LocationCopyHook
+            return LocationCopyHook
 
-    def _getTargetClass(self):
-        from zope.location.pickling import LocationCopyHook
-        return LocationCopyHook
+        def _makeOne(self, obj=None):
+            if obj is None:
+                obj = object()
+            return self._getTargetClass()(obj)
 
-    def _makeOne(self, obj=None):
-        if obj is None:
-            obj = object()
-        return self._getTargetClass()(obj)
+        def test_class_conforms_to_ICopyHook(self):
+            from zope.interface.verify import verifyClass
+            from zope.copy.interfaces import ICopyHook
+            verifyClass(ICopyHook, self._getTargetClass())
 
-    def test_class_conforms_to_ICopyHook(self):
-        from zope.interface.verify import verifyClass
-        from zope.copy.interfaces import ICopyHook
-        verifyClass(ICopyHook, self._getTargetClass())
+        def test_instance_conforms_to_ICopyHook(self):
+            from zope.interface.verify import verifyObject
+            from zope.copy.interfaces import ICopyHook
+            verifyObject(ICopyHook, self._makeOne())
 
-    def test_instance_conforms_to_ICopyHook(self):
-        from zope.interface.verify import verifyObject
-        from zope.copy.interfaces import ICopyHook
-        verifyObject(ICopyHook, self._makeOne())
+        def test___call___w_context_inside_toplevel(self):
+            from zope.copy.interfaces import ResumeCopy
+            class Dummy(object):
+                __parent__ = __name__ = None
+            top_level = Dummy()
+            context = Dummy()
+            context.__parent__ = top_level
+            hook = self._makeOne(context)
+            self.assertRaises(ResumeCopy, hook, top_level, object())
 
-    def test___call___w_context_inside_toplevel(self):
-        from zope.copy.interfaces import ResumeCopy
-        class Dummy(object):
-            __parent__ = __name__ = None
-        top_level = Dummy()
-        context = Dummy()
-        context.__parent__ = top_level
-        hook = self._makeOne(context)
-        self.assertRaises(ResumeCopy, hook, top_level, object())
-
-    def test___call___w_context_outside_toplevel(self):
-        class Dummy(object):
-            __parent__ = __name__ = None
-        top_level = Dummy()
-        context = Dummy()
-        hook = self._makeOne(context)
-        self.assertTrue(hook(top_level, object()) is context)
+        def test___call___w_context_outside_toplevel(self):
+            class Dummy(object):
+                __parent__ = __name__ = None
+            top_level = Dummy()
+            context = Dummy()
+            hook = self._makeOne(context)
+            self.assertTrue(hook(top_level, object()) is context)
 
 
 
-def test_suite():
-    return unittest.TestSuite((
-        unittest.makeSuite(LocationCopyHookTests),
-    ))
+    def test_suite():
+        return unittest.TestSuite((
+            unittest.makeSuite(LocationCopyHookTests),
+        ))
