@@ -11,21 +11,31 @@ envlist =
 commands = 
     python setup.py test -q
 deps =
-    zope.configuration
+    zope.configuration>=4.0
     zope.copy
-    zope.interface
-    zope.proxy>3.3
-    zope.schema>=3.6
+    zope.interface>=4.0
+    zope.proxy>=4.0
+    zope.schema>=4.0
 
 [testenv:jython]
 commands = 
    jython setup.py test -q
 deps =
-    zope.configuration
+    zope.configuration>=4.0
     zope.copy
-    zope.interface
-    zope.proxy>3.3
-    zope.schema>=3.6
+    zope.interface>=4.0
+    zope.proxy>=4.0
+    zope.schema>=4.0
+
+[testenv:py32]
+commands = 
+    python setup.py test -q
+deps =
+    zope.configuration>=4.0
+#   zope.copy>=4.0          not yet ported
+    zope.interface>=4.0
+    zope.proxy>=4.0
+    zope.schema>=4.0
 
 [testenv:coverage]
 basepython =
@@ -38,12 +48,12 @@ commands =
     pip install -e .
     nosetests --with-xunit --with-xcoverage
 deps =
-    zope.component>=3.8
-    zope.configuration
+    zope.configuration>=4.0
     zope.copy
-    zope.interface
-    zope.proxy>3.3
-    zope.schema>=3.6
+    zope.interface>=4.0
+    zope.proxy>=4.0
+    zope.schema>=4.0
+    zope.component>=3.8
     nose
     coverage
     nosexcover
